# web-api-ddd

./: .gitignore  Cargo.toml  README.md  migrate.sqlite.sql  openapi.yml
src/: handlers.rs  lib.rs  main.rs  repositories.rs  types.rs  usecases.rs
src/domain/: interfaces.rs
src/domain/interfaces/: content_interface.rs  user_interface.rs
src/domain/models/: content.rs  user.rs
src/handlers/: content_handler.rs  create_handler.rs  user_handler.rs
src/repositories/: content_repository.rs  user_repository.rs
src/usecases/: content_usecase.rs  user_usecase.rs
